# ComfyUI-PolyMask

./: LICENSE  README.md  __init__.py  poly_mask_node.py  poly_mask_node_multi.py  pyproject.toml
js/: poly_mask_multi_widget.js  poly_mask_widget.js
